# local-llm-stack

./: .env.example  .gitignore  CLAUDE-CODE.md  MODELS.md  README.md  claude-code-env.sh  config.yaml  prepare.sh  pyproject.toml  setup.py
docs/: API.md  BITNET-IMPLEMENTATION-COMPLETE.md  BITNET-SUPPORT-ANALYSIS.md  CLI-IMPLEMENTATION.md  CLI-REFERENCE.md  COMMAND-REFERENCE.md  COMPREHENSIVE-REPORT.md  DEEP-DIVE-ANALYSIS.md  GPU-AUTODETECTION.md  IMPROVEMENT-PLAN.md  METAL-CRASH-FIX.md  QUICKSTART-NEW.md  QUICKSTART.md  README.md  STATE-OF-ART-SUMMARY.md  TEST-REPORT.md  TEST-RESULTS.md  USAGE.md  WHATS-NEW.md  system-prompts.md
scripts/: claude-code.sh  config.sh  generate_env.py  generate_env.sh  load-env.sh  test-claude-code.sh
src/local_llm/: __init__.py  config.py  requirements.txt
src/local_llm/cli/: main.py
src/local_llm/cli/commands/: __init__.py  benchmark.py  bitnet.py  chat.py  config.py  model.py  run.py  server.py  status.py
src/local_llm/hardware/: __init__.py  detector.py  recommender.py
src/local_llm/models/: __init__.py  downloader.py  resolver.py
src/local_llm/utils/: __init__.py
src/python/: agent.py  client.py  config.py  manage_models.py  qwen-agent.py  qwen.py  render_md.py  requirements.txt  test_agent.py
tests/: README-PYTEST.md  README.md  TEST-RESULTS.md  VALIDATION-REPORT.md  conftest.py  run-pytest.sh  test-all.sh  test-config.sh  test-cross-platform.sh  test-gpu.sh  test-quick.sh  test-server.sh  test_bitnet.py  test_cli_commands.py  test_config.py  test_hardware.py  test_integration.py  test_models.py  test_utils.py
tools/benchmarks/: README.md  compare-results.sh  report_20260301_001439.md  run-all.sh  run-api-benchmark.sh  run-batched-bench.sh  run-benchmark.sh  run-evaluation.sh  run-native-benchmark.sh  run-perplexity.sh  run-throughput.sh
